<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="volver">Volver</string>
    <string name="contrasena">Contraseña</string>
    <string name="usuario">usuario</string>
    <string name="timestamp">timestamp</string>
    <string name="Login">Iniciar sesión</string>
    <string name="img">img</string>
    <string name="app_name">STA Companion</string>

    <string name="title_dashboard">Dados</string>
    <string name="title_notifications">Cuenta</string>
    <string name="register">Registrarse</string>
    <string name="register_activity_title">Registrarse</string>
    <string name="sign_out">Cerrar Sesión</string>
    <string name="delete_account">Eliminar Cuenta</string>
    <string name="registro">Registrarse</string>
    <string name="add_sheet">Añadir hoja</string>
    <string name="search">Buscar</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="stress">Estrés</string>
    <string name="determination">Determinación</string>
    <string name="focuses">Especialidades</string>
    <string name="responsibility">Responsabilidad</string>
    <string name="privilege">Privilegio</string>
    <string name="reputation">Reputación</string>
    <string name="injuries">Heridas</string>
    <string name="equipment">Equipo</string>
    <string name="attacks">Ataques</string>
    <string name="resistance">Resistencia</string>
    <string name="max_stress">Estrés max.</string>
    <string name="current_stress">Estrés actual</string>
    <string name="nombre">Nombre</string>
    <string name="species">Especie</string>
    <string name="rank">Rango</string>
    <string name="environment">Entorno</string>
    <string name="education">Educación</string>
    <string name="assignment">Asignación</string>
    <string name="academy">Academia</string>
    <string name="career">Rama</string>
    <string name="traits">Rasgos</string>
    <string name="values">Valores</string>
    <string name="control">Control</string>
    <string name="attributes">Atributos</string>
    <string name="fitness">Forma Física</string>
    <string name="presence">Presencia</string>
    <string name="daring">Osadía</string>
    <string name="insight">Perspicacia</string>
    <string name="reason">Razón</string>
    <string name="disciplines">Disciplinas</string>
    <string name="command">Mando</string>
    <string name="security">Seguridad</string>
    <string name="science">Ciencia</string>
    <string name="conn">Pilotaje</string>
    <string name="engineering">Ingeniería</string>
    <string name="medicine">Medicina</string>
    <string name="appearance">Apariencia</string>
    <string name="age">Edad</string>
    <string name="event_1">Eventos</string>
    <string name="notes_and_awards">Notas</string>
    <string name="eyes">Ojos</string>
    <string name="height">Altura</string>
    <string name="weight">Peso</string>
    <string name="hair">Pelo</string>
    <string name="skin">Piel</string>
    <string name="pronoouns">Pronombres</string>
    <string name="others">Otros</string>
    <string name="sort">Ordenar</string>
    <string name="edit">Editar</string>
    <string name="data">Datos</string>
    <string name="abilities">Habilidades</string>
    <string name="talents">Talentos</string>
    <string name="status">Estado</string>
    <string name="background">Trasfondo</string>
    <string name="events">Eventos</string>
    <string name="remove_sheet">Eliminar hoja</string>
    <string name="title_home">Personajes</string>
    <string name="email">Email</string>
    <string name="account">Cuenta</string>
    <string name="reset">Reiniciar</string>
    <string name="export_to_pdf">Exportar a PDF</string>
    <string name="player">Jugador</string>
</resources>