<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        android:iconTint="@color/white"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort"
        app:showAsAction="ifRoom"/>


    <item
        android:id="@+id/action_add"
        android:icon="@drawable/baseline_add_24"
        android:title="@string/add_sheet"
        app:showAsAction=""/>

    <item
        android:id="@+id/action_delete"
        android:icon="@drawable/baseline_delete_forever_24"
        android:title="@string/remove_sheet"
        app:showAsAction=""/>



</menu>