<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="io.github.k3ssdev.stacompanion.ui.characters.CharactersFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_character" />

    <fragment
        android:id="@+id/navigation_dashboard"
        android:name="io.github.k3ssdev.stacompanion.ui.dice.DiceFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dice" />

    <fragment
        android:id="@+id/navigation_notifications"
        android:name="io.github.k3ssdev.stacompanion.ui.settings.SettingsFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_account" />

    <fragment
        android:id="@+id/characterSheetFragment"
        android:name="io.github.k3ssdev.stacompanion.ui.characters.CharacterSheetFragment"
        android:label="character_sheet_fragment"
        tools:layout="@layout/fragment_character_sheet"
        >

    </fragment>
</navigation>