<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

<!--
    Datos
    characterName, species, environment, rank, upbringing, assignment, academy, career , traits

    Estado y equipo
    stress, currentStress, maxStress, resistance,

    attacks, equipment, injuries,reputation, privilege, responsibility, focuses, determination

    Atributos y Disciplinas
    control, fitness, presence, daring, insight,reason
    command, security, science, conn, engineering, medicine
    values, talents

    Apariencia y otros
    age, skin, hair, weight, height, eyes,notesAndAwards, event1, event2&ndash;&gt;
-->


    <data>
        <variable
            name="viewModel"
            type="io.github.k3ssdev.stacompanion.ui.characters.CharacterSheetViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="?attr/actionBarSize"
        tools:context=".ui.characters.charactersheet.DataTabFragment">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="2"
            android:layout_marginHorizontal="16sp"
            android:padding="16sp">

            <!-- Character Name -->
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nombre"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.characterName}" />
            </LinearLayout>

            <!-- Player -->
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/player"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.playerName}" />
            </LinearLayout>


            <!-- Species -->
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/species"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.species}" />
            </LinearLayout>

            <!-- Rank -->
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/rank"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.rank}" />
            </LinearLayout>

            <!-- Environment -->
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/environment"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.environment}" />
            </LinearLayout>


            <!-- Upbringing -->
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/education"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.upbringing}" />

            </LinearLayout>

            <!-- Assignment -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/assignment"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.assignment}" />

            </LinearLayout>

            <!-- Academy -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/academy"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.academy}" />

            </LinearLayout>

            <!-- Career -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/career"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.career}" />

            </LinearLayout>

            <!-- Traits -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/traits"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.traits}" />

            </LinearLayout>

            <!-- Values -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="1"
                android:layout_columnSpan="2"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/values"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.values}" />

            </LinearLayout>

            <!-- Talents -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="1"
                android:layout_columnSpan="2"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/talents"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.talents}" />

            </LinearLayout>

            <!-- Focuses -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="1"
                android:layout_columnSpan="2"
                android:layout_marginTop="16sp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/focuses"
                    android:textStyle="bold" />

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{viewModel.characterSheetLiveData.focuses}" />

            </LinearLayout>

        </GridLayout>
    </ScrollView>
</layout>