<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="skillsViewModel"
            type="io.github.k3ssdev.stacompanion.ui.characters.CharacterSheetViewModel" />
    </data>

    <!--
        Datos
        characterName, species, environment, rank, upbringing, assignment, academy, career , traits

        Estado y equipo
        stress, currentStress, maxStress, resistance,

        attacks, equipment, injuries,reputation, privilege, responsibility, focuses, determination

        Atributos y Disciplinas
        control, fitness, presence, daring, insight,reason
        command, security, science, conn, engineering, medicine
        values, talents

        Apariencia y otros
        age, skin, hair, weight, height, eyes,notesAndAwards, event1, event2&ndash;&gt;
    -->

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:layout_marginBottom="?attr/actionBarSize"
        tools:context=".ui.characters.charactersheet.SkillsFragment">

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:columnCount="2"
            android:layout_marginHorizontal="16sp"
            android:padding="16sp">

            <!-- Titulo bloque atributos-->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_columnSpan="2"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16sp"
                    android:text="@string/attributes"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

            </LinearLayout>


            <!-- Control -->
            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/control"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.control)}"/>
            </LinearLayout>

            <!-- Fitness -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/fitness"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.fitness)}"/>
            </LinearLayout>

            <!-- Presence -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/presence"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.presence)}"/>
            </LinearLayout>

            <!-- Daring -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/daring"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.daring)}"/>
            </LinearLayout>

            <!-- Insight -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/insight"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.insight)}"/>
            </LinearLayout>

            <!-- Reason -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/reason"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.reason)}"/>
            </LinearLayout>

            <!-- Titulo bloque disciplinas-->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_columnSpan="2"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="32sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="16sp"
                    android:text="@string/disciplines"
                    android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                    android:textStyle="bold" />

            </LinearLayout>

            <!-- Command -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/command"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.command)}"/>

            </LinearLayout>

            <!-- Security -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/security"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.security)}"/>

            </LinearLayout>

            <!-- Science -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/science"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.science)}"/>

            </LinearLayout>

            <!-- Conn -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/conn"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.conn)}"/>

            </LinearLayout>

            <!-- Engineering -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/engineering"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.engineering)}"/>

            </LinearLayout>

            <!-- Medicine -->

            <LinearLayout
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:orientation="vertical"
                android:layout_row="0"
                android:layout_marginTop="16sp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/medicine"
                    android:textStyle="bold"
                    android:paddingHorizontal="16sp"/>

                <TextView
                    android:layout_marginTop="5sp"
                    android:layout_marginLeft="5sp"
                    android:paddingHorizontal="16sp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(skillsViewModel.characterSheetLiveData.medicine)}"/>

            </LinearLayout>

        </GridLayout>
    </ScrollView>
</layout>
